syntax = "proto3";

package logging;
option go_package = "source_grpc/proto";
// LogEntry represents a single log entry
message LogEntry {
  string timestamp = 1;
  string log_level = 2;
  string message = 3;

  // Metadata associated with the log entry
  message Metadata {
    string request_id = 1;
    string client_ip = 2;
    string user_agent = 3;
    string request_method = 4;
    string request_path = 5;
    int32 response_status = 6;
    int32 response_duration = 7;
    map<string, string> extra = 8;
  }
  Metadata metadata = 4;

  // Source information for the log entry
  message Source {
    string host = 1;
    string service = 2;
    string environment = 3;
    map<string, string> extra = 4;
  }
  Source source = 5;
}

// LogRequest represents a request to ingest logs
message LogRequest {
  LogEntry entry = 1;
}

// LogResponse represents a response to a log ingestion request
message LogResponse {
  bool success = 1;
  string message = 2;
}

// LoggingService defines the gRPC service
service LoggingService {
  rpc IngestLog(LogRequest) returns (LogResponse) {}
}
